--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -11,7 +11,7 @@ env:
   ECS_CLUSTER: demoweb                # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION: .github/workflows/task-definition.json # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
-  CONTAINER_NAME: demoweb           # set this to the name of the container in the
+  CONTAINER_NAME: demoecr           # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
 
 permissions:
